Fixed horizontal scrollbar with box-sizing

--- a/src/components/ActionNotify.css
+++ b/src/components/ActionNotify.css
@@ -1,8 +1,8 @@
 .ActionNotify {
-    display: none;
-    position: absolute;
-    right: 24;
-    bottom: 30;
+    display: block;
+    position: fixed;
+    right: 24px;
+    bottom: 50px;
     background: black;
     border-radius: 60%;
     width: 22px;
