--- a/src/components/CommandInput.css
+++ b/src/components/CommandInput.css
@@ -6,12 +6,11 @@
 }
 
 .CommandInput input {
-    font-family: monospace;
-}
-
-.CommandInput input[type=text] {
     background-color: black;
     color: gainsboro;
     font-family: monospace;
     width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
 }
