--- a/src/components/Log.css
+++ b/src/components/Log.css
@@ -8,6 +8,7 @@
     overflow-y: scroll;
     flex: 0 1 auto;
     padding: 10px;
+    position: relative;
 }
 
 .Log.shake {
@@ -50,6 +51,49 @@
 
 .Log pre {
     font-family: monospace;
+}
+
+.Log_ActionNotify {
+    display: none;
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    background: black;
+    border-radius: 60%;
+    width: 22px;
+    height: 22px;
+    text-align: center;
+    margin: 0 auto;
+    cursor: pointer;
+    animation: pulse 2s infinite;
+    box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
+}
+
+@-webkit-keyframes pulse {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
+    }
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+        box-shadow: 0 0 0 10px rgba(204, 169, 44, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
+    }
 }
 
 @keyframes shake {
